# kafka-python

./: Makefile  example.py  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml
kafka/: __init__.py  client_async.py  cluster.py  codec.py  conn.py  errors.py  future.py  socks5_wrapper.py  structs.py  types.py  util.py
kafka/admin/: __init__.py  acl_resource.py  client.py  config_resource.py  new_partitions.py  new_topic.py  types.py
kafka/benchmarks/: consumer_performance.py  load_example.py  producer_performance.py  record_batch_compose.py  record_batch_read.py  varint_speed.py
kafka/consumer/: fetcher.py  group.py  subscription_state.py  types.py
kafka/coordinator/: base.py  consumer.py  heartbeat.py  protocol.py  subscription.py
kafka/metrics/: compound_stat.py  dict_reporter.py  kafka_metric.py  measurable.py  metric_config.py  metric_name.py  metrics.py  metrics_reporter.py  quota.py  stat.py
kafka/metrics/stats/: avg.py  (+10 more)
kafka/partitioner/: __init__.py  default.py
kafka/producer/: future.py  kafka.py  producer_batch.py  record_accumulator.py  sender.py  transaction_manager.py  types.py
kafka/protocol/: abstract.py  admin.py  api.py  api_versions.py  commit.py  fetch.py  find_coordinator.py  frame.py  group.py  metadata.py  parser.py  produce.py  struct.py  types.py
kafka/record/: _crc32c.py  abc.py  default_records.py  legacy_records.py  memory_records.py  util.py
kafka/sasl/: __init__.py  abc.py  gssapi.py  msk.py  oauth.py  plain.py  scram.py  sspi.py
kafka/serializer/: __init__.py  abstract.py
test/: __init__.py  conftest.py  service.py  test_acl_comparisons.py  test_admin.py  test_api_object_implementation.py  test_assignors.py  test_client_async.py  test_cluster.py  test_codec.py  test_conn.py  test_consumer.py  test_coordinator.py  test_fetcher.py  test_metrics.py  test_object_conversion.py  test_package.py  test_partition_movements.py  test_partitioner.py  test_producer.py  test_producer_batch.py  test_record_accumulator.py  test_sender.py  test_subscription_state.py  test_util.py  testutil.py
test/integration/: conftest.py  fixtures.py  test_admin_integration.py  test_consumer_group.py  test_consumer_integration.py  test_producer_integration.py  test_sasl_integration.py
test/protocol/: test_api.py  test_bit_field.py  test_compact.py  test_fetch.py  test_varint.py
test/record/: test_default_records.py  test_legacy_records.py  test_records.py  test_util.py
test/sasl/: test_gssapi.py  test_msk.py
(+25 files in other folders)
