[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-python"
dynamic = ["version"]
authors = [{name = "Dana Powers", email = "dana.powers@gmail.com"}]
description = "Pure Python client for Apache Kafka"
keywords = ["apache kafka", "kafka"]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/dpkp/kafka-python"}

[project.optional-dependencies]
crc32c = ["crc32c"]
lz4 = ["lz4"]
snappy = ["python-snappy"]
zstd = ["zstandard"]
testing = ["pytest", "pytest-mock", "pytest-timeout"]
benchmarks = ["pyperf"]

[tool.setuptools]
include-package-data = false
license-files = [] # workaround for https://github.com/pypa/setuptools/issues/4759

[tool.setuptools.packages.find]
exclude = ["test"]
namespaces = false

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools.dynamic]
version = {attr = "kafka.__version__"}

[tool.isort]
line_length = 120

[tool.mypy]
python_version = "3.8"
exclude_gitignore = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
follow_untyped_imports = true
enable_error_code = ["deprecated"]

[tool.pylint.TYPECHECK]
ignored-classes = ["SyncManager", "_socketobject"]
ignored-modules = []
generated-members = ["py.*"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["E1129"]

[tool.pytest.ini_options]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(thread)d:%(threadName)s %(name)-23s %(message)s"
log_level = "DEBUG"
addopts = ["--durations=10", "--timeout=300"]

[tool.coverage.run]
omit = ["kafka/vendor/*"]
